# Aura

./: CMakeLists.txt  README.md
src/main.cpp/: main.cpp.sln
src/main.cpp/main.cpp/: main.cpp.cpp  main.cpp.vcxproj
src/main.cpp/main.cpp/x64/Debug/: main.cpp.exe.recipe  main.cpp.ilk  vc143.idb
src/main.cpp/main.cpp/x64/Debug/main.cpp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  main.cpp.lastbuildstate
